syntax = "proto3";

package happyday;

import "google/protobuf/timestamp.proto";

message HappyDayRequest {
  google.protobuf.Timestamp date = 1;
  bool includeReason = 2;

  /* use various data-types for testing here */
  double double = 3;
  int32 int32 = 4;
  int64 int64 = 5;
  string string = 6;
  bytes bytes = 7;
  Foo fooEnum = 8;
  repeated MiscInfo misc = 9;
  float float = 10;
  string NonCamel_case_FieldName = 11;
}

message HappyDayResponse {
  bool isHappyDay = 1;
  string reason = 2;
  string formattedDate = 3;
  string err = 4;
}

enum Foo {
  BAR = 0;
  BAZ = 1;
  FAZ = 2;
}

message MiscInfo {
  repeated string weatherOfPastFewDays = 1;
  oneof alternative {
    string fooString = 2;
    Foo fooEnum = 3;
  }
}